# flisp4

./: .gitignore  CMakeLists.txt
boostrap/fvm/: pom.xml
bootstrap/: compile.py  pom.xml
bootstrap/fvm/: dependency-reduced-pom.xml  pom.xml
data/: empty.fasm  empty.fvm  helloWorld.fasm  helloWorld.flang  helloWorld.fvm  languageFeatures.fasm  languageFeatures.flang  languageFeatures.fvm  lispSyntax.flang
include/: assembler.hh  bytecode.hh  bytecode_reader.hh  bytecode_writer.hh  debug.hh  entry.hh  heap.hh  lib.hh  memory_semantic_macros.hh  moveonly.hh  nativeregistry.hh  object.hh  objects.hh  stack.hh  symbol_table.hh  util.hh  vm.hh
include/bytecode/: bytecode_reader.hh  bytecode_writer.hh
include/cmd/: assemble.hh  entry.hh  execute.hh
include/lib/: std.hh
include/objects/: boolean.hh  character.hh  closure.hh  continuation.hh  env.hh  frame.hh  function.hh  integer.hh  lambda.hh  map.hh  native_function.hh  native_reference.hh  nativefn.hh  nil.hh  object.hh  pair.hh  primitive.hh  real.hh  reference.hh  slotiter.hh  slottedobject.hh  stack.hh  string.hh  structure.hh  symbol.hh  symboltable.hh  vector.hh  vm.hh
include/refactor/: heap.hh  object.hh
include/runtime/: coderegistry.hh  fileregistry.hh  nativeregistry.hh  object.hh  stack.hh  vm.hh
include/util/: debug.hh
includeOld/bytecode/: assembler.hh  bytecode.hh
includeOld/cmd/: decompile.hh  entry.hh
includeOld/runtime/: heap.hh  nativeregistry.hh  stack.hh  (+1 more)
poc/: main.py  transpiler.py
scripts/: bootstrap.sh  compileBootstrap.sh  countLines.sh  flang.sh
src/: heap.cpp  main.cpp
(+50 files in other folders)
